avcodec/vaapi_encode: Fix segfault upon closing uninitialized encoder

Fixes ticket #9537.
Probably a regression since 2b3206891649f317c20993411efef4bee39ae784.

Signed-off-by: Andreas Rheinhardt <andreas.rheinhardt@outlook.com>